--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,3 +16,9 @@
   	-webkit-box-shadow: 0px 0px 0px 0px #fff;
   	box-shadow:         0px 0px 0px 0px #fff;
 }
+
+.center-image
+{
+    margin: 0 auto;
+    display: block;
+}
