--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,8 +17,8 @@
   	box-shadow:         0px 0px 0px 0px #fff;
 }
 
-.center-image
-{
-    margin: 0 auto;
-    display: block;
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
