--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -97,6 +97,10 @@ img.blur {
     word-wrap: break-word;
 }
 
+.main-content h1, h2, h3 {
+    padding-top: 2em;
+}
+
 .avatar {
     width: 130px;
     max-width: 130px;
